# sentai

./: README.md  pyproject.toml
.github/workflows/: main.yml
context/: PRD.md  TASKS.md
src/sentai/: __init__.py  classifier.py  cli.py  models.py
tests/: test_classifier.py
